--- a/Audio Visualizer/Audio Visualizer.csproj
+++ b/Audio Visualizer/Audio Visualizer.csproj
@@ -74,6 +74,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ChangeRgb.cs" />
+    <Compile Include="TypeOfInput.cs" />
     <Compile Include="TypeOfView.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -106,6 +107,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Audio Visualizer.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
