--- a/Audio Visualizer/App.config
+++ b/Audio Visualizer/App.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Audio_Visualizer.Audio_x0020_Visualizer" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <Audio_Visualizer.Audio_x0020_Visualizer>
+            <setting name="ViewType" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="InputSource" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </Audio_Visualizer.Audio_x0020_Visualizer>
+    </userSettings>
 </configuration>
