--- a/Audio Visualizer/App.config
+++ b/Audio Visualizer/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Audio_Visualizer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="Audio_Visualizer.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="Audio_Visualizer.Audio_x0020_Visualizer" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
@@ -10,6 +11,14 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <userSettings>
+        <Audio_Visualizer.Properties.Settings>
+            <setting name="TypeOfInput" serializeAs="String">
+                <value>None</value>
+            </setting>
+            <setting name="TypeOfView" serializeAs="String">
+                <value>None</value>
+            </setting>
+        </Audio_Visualizer.Properties.Settings>
         <Audio_Visualizer.Settings>
             <setting name="Input" serializeAs="String">
                 <value>None</value>
