--- a/Audio Visualizer/Properties/Settings.settings
+++ b/Audio Visualizer/Properties/Settings.settings
@@ -1,8 +1,8 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Audio_Visualizer" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Audio_Visualizer.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="Input" Type="System.String" Scope="User">
+    <Setting Name="TypeOfInput" Type="System.String" Scope="User">
       <Value Profile="(Default)">None</Value>
     </Setting>
     <Setting Name="TypeOfView" Type="System.String" Scope="User">
