--- a/Audio Visualizer/Audio Visualizer.csproj
+++ b/Audio Visualizer/Audio Visualizer.csproj
@@ -151,7 +151,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Audio Visualizer Icon.ico" />
+    <Resource Include="Resources\Audio Visualizer Icon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Accord.3.8.0\build\Accord.targets" Condition="Exists('..\packages\Accord.3.8.0\build\Accord.targets')" />
