--- a/Audio Visualizer/App.config
+++ b/Audio Visualizer/App.config
@@ -15,6 +15,9 @@
             <setting name="TypeOfInput" serializeAs="String">
                 <value>None</value>
             </setting>
+            <setting name="Color" serializeAs="String">
+                <value />
+            </setting>
         </Audio_Visualizer.Properties.Settings>
         <Audio_Visualizer.Settings>
             <setting name="Input" serializeAs="String">
