--- a/Audio Visualizer/Properties/Settings.settings
+++ b/Audio Visualizer/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="TypeOfInput" Type="System.String" Scope="User">
       <Value Profile="(Default)">None</Value>
     </Setting>
+    <Setting Name="Color" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
