--- a/Audio Visualizer/App.config
+++ b/Audio Visualizer/App.config
@@ -16,7 +16,7 @@
                 <value>None</value>
             </setting>
             <setting name="Color" serializeAs="String">
-                <value />
+                <value>Black</value>
             </setting>
         </Audio_Visualizer.Properties.Settings>
         <Audio_Visualizer.Settings>
